--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ services:
   - docker
 
 script:
-  - docker-compose build
+  - docker-compose up -d
+  - sleep 20
   - docker-compose run --rm app bin/console security:check
   - docker-compose run --rm app bin/console doctrine:schema:create
