--- a/api/.env
+++ b/api/.env
@@ -15,4 +15,7 @@ APP_SECRET=!ChangeMe!
 DATABASE_URL=pgsql://api-platform:!ChangeMe!@db/api?serverVersion=9.6
 ###< doctrine/doctrine-bundle ###
 
-CORS_ALLOW_ORIGIN=^http://localhost:[0-9]+
+APP_TRUSTED_PROXIES=["10.0.0.0/8","172.16.0.0/12","192.168.0.0/16"]
+APP_TRUSTED_HOSTS=["localhost"]
+CORS_ALLOW_ORIGIN=^https?://localhost:[0-9]*$
+VARNISH_URL=http://cache-proxy
