--- a/api/composer.json
+++ b/api/composer.json
@@ -45,7 +45,7 @@
     },
     "extra": {
         "symfony": {
-            "id": "",
+            "id": "01BTF1KT7KK7JDNS2BQ9KEFECA",
             "allow-contrib": false
         }
     }
