--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,13 +1,13 @@
 FROM node:8.5-alpine
 
-# Prevent the reinstallation of node modules at every changes in the source code
-RUN mkdir -p /usr/src/admin /tmp/deps
-COPY package.json /tmp/deps/package.json
-COPY yarn.lock /tmp/deps/yarn.lock
-RUN cd /tmp/deps && yarn install
-RUN mv /tmp/deps/node_modules /usr/src/admin && rm -Rf /tmp/deps
+RUN mkdir -p /usr/src/admin
 
 WORKDIR /usr/src/admin
+
+# Prevent the reinstallation of node modules at every changes in the source code
+COPY package.json yarn.lock ./
+RUN yarn install
+
 COPY . ./
 
 CMD yarn start
