--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,15 +1,15 @@
 FROM node:8.5-alpine
 
+RUN mkdir -p /usr/src/client
+
+WORKDIR /usr/src/client
+
 RUN yarn global add @api-platform/client-generator
 
 # Prevent the reinstallation of node modules at every changes in the source code
-RUN mkdir -p /usr/src/client /tmp/deps
-COPY package.json /tmp/deps/package.json
-COPY yarn.lock /tmp/deps/yarn.lock
-RUN cd /tmp/deps && yarn install
-RUN mv /tmp/deps/node_modules /usr/src/client && rm -Rf /tmp/deps
+COPY package.json yarn.lock ./
+RUN yarn install
 
-WORKDIR /usr/src/client
 COPY . ./
 
 CMD yarn start
