--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,16 @@ before_script:
   - while sudo lsof -Pi :5432 -sTCP:LISTEN -t; do sleep 1; done
 
 script:
+  - if [[ $(jq  '.extra.symfony.id' api/composer.json) != '""' ]]; then echo 'symfony.id must be empty' 1>&2 && false; fi
   - docker-compose up -d
-  - sleep 20
+  - sleep 30
   - docker-compose exec -T php composer req sensiolabs/security-checker
   - docker-compose exec -T php bin/console security:check
+  - curl http://localhost # API
+  - curl http://localhost:81 # Varnish
+  - curl http://localhost:3000 # Client
+  - curl http://localhost:3001 # Admin
+  - curl -k https://localhost # API (HTTP/2)
+  - curl -k https://localhost:444 # Varnish (HTTP/2)
+  - curl -k https://localhost:8000 # Client (HTTP/2)
+  - curl -k https://localhost:8001 # Admin (HTTP/2)
