--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,17 @@ sudo: required
 services:
   - docker
 
-before_script:
+before_install:
   - sudo service postgresql stop
+  - wget https://kubernetes-helm.storage.googleapis.com/helm-v2.6.1-linux-amd64.tar.gz
+  - tar xzf helm-v2.6.1-linux-amd64.tar.gz
   # wait for postgresql to shutdown
   - while sudo lsof -Pi :5432 -sTCP:LISTEN -t; do sleep 1; done
 
 script:
   - if [[ $(jq  '.extra.symfony.id' api/composer.json) != '""' ]]; then echo 'symfony.id must be empty' 1>&2 && false; fi
   - docker-compose up -d
+  - linux-amd64/helm lint api/helm/api/
   - sleep 30
   - docker-compose exec -T php composer req sensiolabs/security-checker
   - docker-compose exec -T php bin/console security:check
