--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
         ports:
             - "80:80"
         volumes:
-            - ./api/public:/srv/api/public:rw
+            - ./api/public:/srv/api/public:ro
 
     cache-proxy:
         build:
