New port mapping

--- a/api/composer.json
+++ b/api/composer.json
@@ -45,7 +45,7 @@
     },
     "extra": {
         "symfony": {
-            "id": "",
+            "id": "01BVJ19B5YD3WKSPJHQBBYXJC1",
             "allow-contrib": false
         }
     }
