--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_ENTRYPOINT=//localhost
-API_PLATFORM_CLIENT_GENERATOR_ENTRYPOINT=http:////api
+REACT_APP_API_ENTRYPOINT=http://localhost:8080
+API_PLATFORM_CLIENT_GENERATOR_ENTRYPOINT=http://api
 API_PLATFORM_CLIENT_GENERATOR_OUTPUT=src
