--- a/api/.env
+++ b/api/.env
@@ -13,5 +13,5 @@ DATABASE_URL=pgsql://api-platform:!ChangeMe!@db/api?serverVersion=9.6
 
 APP_TRUSTED_PROXIES=["10.0.0.0/8","172.16.0.0/12","192.168.0.0/16"]
 APP_TRUSTED_HOSTS=["localhost", "api"]
-CORS_ALLOW_ORIGIN=^https?://localhost:[0-9]*$
+CORS_ALLOW_ORIGIN=^https?://localhost:?[0-9]*$
 VARNISH_URL=http://cache-proxy
