--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -57,6 +57,7 @@ services:
 
     client:
         # Use a static website hosting service production
+        # See https://github.com/facebookincubator/create-react-app/blob/master/packages/react-scripts/template/README.md#deployment
         build:
             context: ./client
             dockerfile: ./Dockerfile
@@ -70,6 +71,7 @@ services:
 
     admin:
         # Use a static website hosting service in production
+        # See https://github.com/facebookincubator/create-react-app/blob/master/packages/react-scripts/template/README.md#deployment
         build:
             context: ./admin
             dockerfile: ./Dockerfile
