chore: bump PWA deps

--- a/pwa/Dockerfile
+++ b/pwa/Dockerfile
@@ -2,15 +2,11 @@
 
 
 # Versions
-FROM node:lts-alpine AS node_upstream
+FROM node:lts AS node_upstream
 
 
 # Base stage for dev and build
 FROM node_upstream AS base
-
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-# hadolint ignore=DL3018
-RUN apk add --no-cache libc6-compat
 
 WORKDIR /srv/app
 
@@ -54,8 +50,8 @@ ENV NODE_ENV production
 # Delete the following line in case you want to enable telemetry during runtime.
 ENV NEXT_TELEMETRY_DISABLED 1
 
-RUN addgroup --system --gid 1001 nodejs; \
-	adduser --system --uid 1001 nextjs
+RUN addgroup --gid 1001 nodejs; \
+	adduser --uid 1001 nextjs
 
 COPY --from=builder --link /srv/app/public ./public
 
